--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,6 +22,10 @@
       <div class="container-title">
         <span class="title"><strong>trybe</strong>shopping</span>
       </div>
+      <div class="container-search">
+        <i class="fas fa-search"></i>
+        <input class='search' type="search" name="pesquisa" id="pesquisa" placeholder="Busque aqui">
+      </div>
       <i class="material-icons" style="font-size:45px;color:white">shopping_cart</i>
       <div class="container-cartTitle">
         <span class="cart__title">Meu carrinho</span>
@@ -30,8 +35,10 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <h4>Total:</h4>
+      <section class="totalcart">
         <p class="total-price"></p>
+      </section>
+
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
